🚀 MAJOR RELEASE v2.0.0: Complete Platform Pivot to AI Procurement Intelligence
✨ NEW FEATURES:
- Complete platform transformation from marketing/ad automation to AI procurement intelligence
- Airtable integration for form submission storage with proper field mapping
- Comprehensive testing infrastructure (16 unit tests + integration tests)
- Security enhancements with CSP headers and input validation
- CI/CD pipeline with GitHub Actions
- Code formatting and linting with Prettier and ESLint

🏗️ ARCHITECTURE:
- Updated all pages with procurement-focused messaging
- Enhanced contact form with dual storage (email + database)
- New admin page for form submission management
- Robust error handling and user feedback

🛡️ SECURITY:
- Content Security Policy headers
- XSS protection and input sanitization
- Secure environment variable management
- Comprehensive security headers

🧪 TESTING:
- 16 unit tests covering form validation, data formatting, and error handling
- Integration tests for Airtable API
- CI/CD pipeline with automated testing
- Code quality tools and formatting

📚 DOCUMENTATION:
- Complete README overhaul
- Setup guides and contributing guidelines
- Comprehensive release notes
- Environment templates and best practices

🔧 TECHNICAL:
- New dependencies: airtable, prettier
- New configuration files: .prettierrc, vercel.json, security-headers.js
- Enhanced package.json scripts
- Node.js version management with .nvmrc

This release represents a complete transformation of the platform with enterprise-grade best practices, comprehensive testing, and production-ready security enhancements.

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "airtable": "^0.12.2",
     "dotenv": "^17.2.0",
     "express": "^4.21.2",
     "prop-types": "^15.8.1",
@@ -22,6 +23,12 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test:unit": "jest __tests__/contact-form.test.js",
+    "test:integration": "node test-airtable.js",
+    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,md}\"",
+    "format:check": "prettier --check \"src/**/*.{js,jsx,ts,tsx,json,css,md}\"",
+    "lint": "eslint src/ --ext .js,.jsx",
+    "lint:fix": "eslint src/ --ext .js,.jsx --fix",
     "eject": "react-scripts eject",
     "server": "node server.js",
     "dev": "npm run build && npm run server",
@@ -53,7 +60,9 @@
     "autoprefixer": "^10.4.14",
     "babel-loader": "^10.0.0",
     "html-webpack-plugin": "^5.6.3",
+    "jest": "^27.5.1",
     "postcss": "^8.4.21",
+    "prettier": "^3.6.2",
     "source-map-explorer": "^2.5.3",
     "tailwindcss": "^3.2.7",
     "vercel": "^44.4.1",
